Agregue años a cada posteo

--- a/galeria.html
+++ b/galeria.html
@@ -177,7 +177,7 @@
           las distintas áreas. Es un espacio para mostrar y valorar su
           aprendizaje cotidiano.
         </p>
-        <h3>Profesor Paez Augusto y alumnos de 5to año</h3> <br>
+        <h3>Profesor Paez Augusto y alumnos de 4°,5° y 6° año</h3> <br>
       </div>
       <div class="row">
         <!-- Tarjeta -->
@@ -190,9 +190,9 @@
                 alt="Proyecto Aquello otro"
               />
               <div class="card-body">
-                <h5 class="card-title">Aquello otro</h5>
+                <h5 class="card-title">Aquello otro (4° Año)</h5>
                 <p class="card-text">
-                  Así vemos, sentimos y contamos lo desconocido.
+                  Así vemos, sentimos y contamos lo desconocido. 
                 </p>
               </div>
             </div>
@@ -207,7 +207,7 @@
                 alt="Casas tomadas"
               />
               <div class="card-body">
-                <h5 class="card-title">Casas tomadas</h5>
+                <h5 class="card-title">Casas tomadas (5° Año)</h5>
                 <p class="card-text">
                   Las sombras toman lo que el miedo deja libre.
                 </p>
@@ -224,7 +224,7 @@
                 alt="Casas tomadas"
               />
               <div class="card-body">
-                <h5 class="card-title">Palabras Tetris</h5>
+                <h5 class="card-title">Palabras Tetris (6° Año)</h5>
                 <p class="card-text">
                   Crecer es encajar palabras que nos construyen
                 </p>
