Subi, el cartel de feliz año 2026

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             loop
             style="width: 100%; height: 100%; object-fit: cover"
             >
-            <source src="vid/fnmb.mp4" type="video/mp4" />
+            <source src="vid/felizaño.mp4" type="video/mp4" />
             Tu navegador no soporta la reproducción de video.
           </video>
         </div>
