actualice el formulario de contacto para usar Formspree

--- a/nosotros.html
+++ b/nosotros.html
@@ -175,11 +175,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                     <div id="form-message" style="display:none;" class="alert alert-success">
                         ¡Tu mensaje fue enviado con éxito!
                     </div>
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
-                      <input type="hidden" name="form-name" value="contact" />
-                        <p style="display:none">
-                          <label>No llenar si eres humano: <input name="bot-field" /></label>
-                        </p>
+                    <form id="contactForm" action="https://formspree.io/f/mkovkaan" method="POST">
                         <div class="form-row">
                             <div class="col-sm-6 control-group">
                                 <input type="text" class="form-control p-4" id="name" name="name" placeholder="Tu Nombre" required="required" data-validation-required-message="Ingresa tu nombre" />
